tests/NormalTests/paczka1/small_fuzzy/94375850.err
Error in line 3: UhM91mZnQ A107 48,8
Error in line 6: h9O A107 52,8
